# openapi.yaml
@@ -11,18 +11,6 @@ host: fast-campus-server-dev.herokuapp.com
 basePath: /
 
 paths:
-<<<<<<< HEAD
-  /users/getAllUsers:
-    get:
-      summary: Gets all users
-      description: Returns all users.
-      responses:
-        200:
-          description: retrun all users
-          schema:
-            type: array
-            items:
-=======
   /auth/signup:
     post:
       summary: Used to signup new users
@@ -71,7 +59,6 @@ paths:
           description: The data sent has resulted in a successful login. The schema shown in the response is of the generic user object.  Depending on the type of user it will respond with the approriate type of user.
           schema:
             type: user
->>>>>>> typesriptPort
               required:
                 - username
               properties:
